# fastapi-cookbook

./: .flake8  .gitattributes  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  codecov.yaml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: cd.yaml  ci.yaml
alembic/: env.py
alembic/versions/: 0bdf3abd5213_init_alembic.py  7d6aa6eaf640_feat_jmy.py
app/: main.py
app/api/v1/: routers.py
app/api/v1/endpoints/: auth.py  shields.py  users.py
app/api/v1/endpoints/admin/: jmy.py  users.py
app/core/: auth.py  configs.py  container.py  database.py  decorators.py  lifespan.py  logger.py  logging.py  middlewares.py  router.py
app/exceptions/: auth.py  base.py  database.py  handlers.py  router.py  users.py
app/models/: __init__.py  auth.py  base.py  enums.py  jmy.py  users.py
app/repositories/: auth.py  base.py  jmy.py  users.py
app/schemas/: auth.py  base.py  jmy.py  responses.py  shields.py  users.py
app/services/: auth.py  base.py  jmy.py  security.py  users.py
app/tests/: conftest.py  test_mock.py
app/tests/api/v1/: test_auth.py  test_shields.py  test_users.py
app/tests/api/v1/admin/: test_users.py
app/tests/services/: test_users.py
app/utils/: etc.py  logging.py  shields.py
docs/: alembic.md  layers.md  uv.md
envs/: template.env  test.env
k8s/: configmap.yaml  fastapi.yaml  mysql.yaml
k8s/mysql/: fastapi.yaml  mysql.yaml
k8s/postgresql/: configmap.yaml  fastapi.yaml  postgresql.yaml
static/: swagger-ui-bundle.js
